テーマカラーの変更

--- a/assets/stylesheets/variables.scss
+++ b/assets/stylesheets/variables.scss
@@ -1,6 +1,6 @@
 $red_color: #ff5746;
 $pink_color: #ff8874;
-$blue_color: #3fc6ff;
+$blue_color: #94d8ff;
 $purple_color: #972aff;
 $green_color: #17dbd6;
 $yellow_color: #fff8c6;
