--- a/assets/stylesheets/sidebar.scss
+++ b/assets/stylesheets/sidebar.scss
@@ -3,7 +3,7 @@
     padding: 0 0 2rem 0;
     .title {
       color: #fff;
-      background-color: $pink_color;
+      background-color: $blue_color;
       font-size: 1rem;
       padding: 0.7rem;
       margin-bottom: 1.5rem;
