プロフィール画像を自前で配信

--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <section id="profile">
-  <img class="avatar" src="https://avatars1.githubusercontent.com/u/6788936?v=4" />
+  <img class="avatar" src="{{ .Site.BaseURL }}/avatar.jpg" />
   <ul>
     <li>
       <h1>愛知県東三河のウェブエンジニア<a href="/about">t4traw</a>のブログです。</h1>
