--- a/layouts/partials/metadata.html
+++ b/layouts/partials/metadata.html
@@ -1,5 +1,5 @@
 <div id="metadata">
-  <img class="avatar" src="https://avatars1.githubusercontent.com/u/6788936?v=4" />
+  <img class="avatar" src="{{ .Site.BaseURL }}/avatar.jpg" />
   <ul>
     <li class="author_name">この記事を書いたひと: <a href="/about">@t4traw</a></li>
     <li class="publish_date">投稿日: {{ dateFormat "2006年1月2日" .Date }}</li>
