alt属性の追加

--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <section id="profile">
-  <img class="avatar" src="{{ .Site.BaseURL }}/avatar.jpg" />
+  <img class="avatar" src="{{ .Site.BaseURL }}/avatar.jpg" alt="" />
   <ul>
     <li>
       <h1>愛知県東三河のウェブエンジニア<a href="/about">t4traw</a>のブログです。</h1>
