コントラスト調整

--- a/assets/stylesheets/new.scss
+++ b/assets/stylesheets/new.scss
@@ -9,7 +9,7 @@
   --nc-bg-1: #ffffff;
   --nc-bg-2: #f6f8fa;
   --nc-bg-3: #e5e7eb;
-  --nc-lk-1: #0070f3;
+  --nc-lk-1: #0062ff;
   --nc-lk-2: #0366d6;
   --nc-lk-tx: #ffffff;
   --nc-ac-1: #79ffe1;
