--- a/assets/stylesheets/scaffolds.scss
+++ b/assets/stylesheets/scaffolds.scss
@@ -4,7 +4,7 @@ ol.posts {
     margin-top: 1rem;
     margin-bottom: 1rem;
     time {
-      color: #888;
+      color: #5d5d5d;
       margin-left: 0.3rem;
       font-size: 90%;
     }
