--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,21 +20,7 @@
     {{ partial "header.html" . }}
     {{ block "main" . }}{{ end }}
     {{ partial "footer.html" . }}
+    <script src="//instant.page/5.1.0" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
   </body>
   <script src="{{ .Site.BaseURL }}{{ if eq (getenv "APP_ENV") "dev" }}bundle.js{{ else }}{{ index .Site.Data.manifest "bundle.js" | relURL }}{{ end }}"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.0.1/instantclick.js" data-no-instant></script>
-  <script data-no-instant>
-    (function(i,s,o,g,r,a,m){
-      i['GoogleAnalyticsObject']=r;
-      i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments);},i[r].l=1*new Date();
-      a=s.createElement(o),m=s.getElementsByTagName(o)[0],a.async=1,a.src=g;
-      m.parentNode.insertBefore(a,m);
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-149611831-1', 'auto');
-    InstantClick.on('change', function () {
-      ga('send', 'pageview', location.pathname + location.search);
-    });
-
-    InstantClick.init();
-  </script>
 </html>
