rel="noreferrer"を追加

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,10 +9,10 @@
         <a href="/about">About</a>
       </li>
       <li>
-        <a href="https://twitter.com/t4traw" target="_blank">Twitter</a>
+        <a href="https://twitter.com/t4traw" target="_blank" rel="noreferrer">Twitter</a>
       </li>
       <li>
-        <a href="https://github.com/t4traw" target="_blank">GitHub</a>
+        <a href="https://github.com/t4traw" target="_blank" rel="noreferrer">GitHub</a>
       </li>
       <li>
         <a href="/index.xml" target="_blank">RSS</a>
