--- a/assets/stylesheets/header.scss
+++ b/assets/stylesheets/header.scss
@@ -1,16 +1,21 @@
-nav {
-  ul {
-    margin: 0;
-    padding: 0;
-    li {
-      display: inline;
-      &:after {
-        content: ' / ';
-        text-decoration: none;
-        color: #888;
-      }
-      &:last-child:after {
-        content: none;
+header {
+  p {
+    margin-bottom: 0.5rem;
+  }
+  nav {
+    ul {
+      margin: 0;
+      padding: 0;
+      li {
+        display: inline;
+        &:after {
+          content: ' / ';
+          text-decoration: none;
+          color: #888;
+        }
+        &:last-child:after {
+          content: none;
+        }
       }
     }
   }
