--- a/assets/stylesheets/scaffolds.scss
+++ b/assets/stylesheets/scaffolds.scss
@@ -28,9 +28,16 @@ img.avatar {
   width: 80px;
   height: 80px;
   border-radius: 100%;
-  margin: 0;
-  margin-right: 1rem;
   padding: 0;
+  @media screen and (min-width: $tablet_width + 1px) {
+    margin: 1rem;
+  }
+  @media only screen and (min-width: $smartphone_width + 1px) and (max-width: $tablet_width) {
+    margin: 1rem;
+  }
+  @media screen and (max-width: $smartphone_width) {
+    margin: 1rem auto;
+  }
 }
 
 .flex_list {
