--- a/assets/stylesheets/variables.scss
+++ b/assets/stylesheets/variables.scss
@@ -1,5 +1,9 @@
 $base_fontsize: 1rem;
 
+$pc_width: 1120px;
+$tablet_width: 768px;
+$smartphone_width: 414px;
+
 $red_color: #ff5746;
 $pink_color: #ff8874;
 $blue_color: #94d8ff;
