--- a/assets/stylesheets/new.scss
+++ b/assets/stylesheets/new.scss
@@ -104,7 +104,7 @@ body {
 
   /* Main body text */
   color: var(--nc-tx-2);
-  font-size: 1.03rem;
+  @include font-size($base_fontsize);
   line-height: 1.5;
 }
 
@@ -138,30 +138,6 @@ h4,
 h5,
 h6 {
   margin-bottom: 0.3rem;
-}
-
-h1 {
-  font-size: 2.25rem;
-}
-
-h2 {
-  font-size: 1.85rem;
-}
-
-h3 {
-  font-size: 1.55rem;
-}
-
-h4 {
-  font-size: 1.25rem;
-}
-
-h5 {
-  font-size: 1rem;
-}
-
-h6 {
-  font-size: 0.875rem;
 }
 
 a {
